# py-project

./: .gitignore  docker-compose.yml  pyproject.toml
src/: main.py
src/adapters/entrypoints/api/: base.py
src/adapters/entrypoints/api/v1/: route_authentication.py
src/adapters/repositories/: repository_user.py
src/config/: container.py  database.py
src/domain/dtos/authentication/: dto_sign_up.py
src/domain/models/: model_user.py
src/domain/ports/repositories/: interface_repository_user.py
src/domain/services/: authentication.py
src/domain/value_objects/: vo_object_id.py
